Level-10 Normal GUI

--- a/src/main/resources/css/dialogue-box.css
+++ b/src/main/resources/css/dialogue-box.css
@@ -1,14 +1,19 @@
 .label {
-    -fx-background-color: linear-gradient(to bottom right, #00ffbf, #00ddff);
+    -fx-background-color: rgba(0, 255, 191, 0.5); /* Less opaque color */
     -fx-border-color: #d55e00 #009e73 #cc79a7 #0072b2;
     -fx-border-width: 2px;
     -fx-background-radius: 1em 1em 0 1em;
     -fx-border-radius: 1em 1em 0 1em;
+    -fx-font-size: 16px; /* Increase font size */
+    -fx-padding: 10px; /* Increase box size */
 }
 
 .reply-label {
-    -fx-background-radius: 1em 1em 1em 0;
+    -fx-background-color: rgba(0, 221, 255, 0.5); /* Less opaque color */
     -fx-border-radius: 1em 1em 1em 0;
+    -fx-background-radius: 1em 1em 1em 0;
+    -fx-font-size: 16px; /* Increase font size */
+    -fx-padding: 10px; /* Increase box size */
 }
 
 #displayPicture {
